# Py1

./: README.md  analisis_depression_risk.ipynb  main.py  pyproject.toml
Data/: raw
Modelos/: label_encoder.pkl  standard_scaler.pkl
Notebooks/: 01_Carga_de_Datos.ipynb  01_Carga_de_Datos_.ipynb  02_Analisis_Inicial_ de _Variables.ipynb  02_Analisis_Inicial__de__Variables.ipynb  03_EDA.ipynb  04_Preprocesamiento.ipynb  04_Preprocesamiento_de_datos.ipynb  05_Modelado_Predictivo.ipynb  05_Modelamiento_Predictivo.ipynb  06_Guardado_del_modelo.ipynb  EDA.ipynb
